--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <!-- Don't forget to link your CSS file! -->
+     <link rel="styleshit" href="./style.css">
+  <style>
+   h1 {
+  color: red;
+  text-align: center;}
+  header { text-align: center;}
+  figure{ text-align: center;
+         
+  }
+  section{text-align: center;
+   
+  }
+  nav{padding-top: 10px;
+    background-color: powderblue;
+  }
+  p{text-align: center;
+    width: 800px;}
+
+
+  </style>
   </head>
   <body>
     <header>
