Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   nav{padding-top: 10px;
     background-color: powderblue;
   }
-  p{text-align: center;
+  section[p]{text-align: center;
     width: 800px;}
 
 
