--- a/index.html
+++ b/index.html
@@ -55,32 +55,32 @@
         </p>
       </div>
       
-      <div>
+      <footer>
         <h3>Correspondence</h3>
         <p>
           Exceptional Realty<br>
           P.O.Box 5555<br>
           Brooklyn, NY 11201
         </p>
-      </div>
+      </footer>
 
-      <div>
+      <footer>
         <h3>Links</h3>
         <p>
           <a href="#" target="_blank">Home Restoration</a><br>
           <a href="#" target="_blank">Afordable Mortgages</a><br>
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
-      </div>
+      </footer>
 
-      <div>
+      <footer>
         <h3>Follow</h3>
         <p>
           <a href="#" target="_blank">Youtube</a><br>
           <a href="#" target="_blank">Facebook</a><br>
           <a href="#" target="_blank">Twitter</a>
         </p>
-      </div>
+      </footer>
     </section>
   </body>
 </html>
