Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
   }
   section[p]{text-align: center;
     width: 800px;}
+    footer {
+  background-color: red;
+  padding: 10px;
+  text-align: center;
+  color: white;
+}
 
 
   </style>
