Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
     </section>
 
     <section id="details">
-      <div>
+      <footer>
         <h3>Contact</h3>
         <p>
           <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
           +1 710 555 1234<br>
           @fakeRealty
         </p>
-      </div>
+      </footer>
       
       <footer>
         <h3>Correspondence</h3>
