Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
   section{text-align: center;
    
   }
-  nav{padding-top: 10px;
+  nav{padding: 10px;
     background-color: powderblue;
   }
   section[p]{text-align: center;
     width: 800px;}
-    footer {
-  background-color: red;
+    
+   footer {
+  background-color: #777;
   padding: 10px;
   text-align: center;
   color: white;
