--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     width: 800px;}
     
    footer {
-  background-color: #777;
+  background-color:red;
   width: 25%;
   text-align: center;
   color: white;
