--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   figure{ text-align: center;
          
   }
-  section[footer]{text-align: center;
+  /*section{text-align: center;*/
    
   }
   nav{padding: 10px;
