--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <!-- Don't forget to link your CSS file! -->
-     <link rel="styleshit" href="./style.css">
+    <link rel="stylesheet" href="./style.css">
   <style>
    h1 {
   color: red;
