--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
   color: black;
   text-align: justify;
 }
-
+.details {
+  margin: auto;
+  width: 60%;
+  border: 3px solid #73AD21;
+  padding: 10px;
+}
 
 
   </style>
