Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -29,10 +29,8 @@
   text-align: justify;
 }
 details {
-  margin: auto;
-  width: 60%;
-  border: 3px solid #73AD21;
-  padding: 10px;
+ text-align: center;
+  border: 3px solid green;
 }
 
 
