Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
   color: black;
   text-align: justify;
 }
-id {
- text-align: center;
-  border: 3px solid green;
+img {
+  float: right;
 }
-
 
   </style>
   </head>
