Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     background-color: powderblue;
   }
   section[p]{text-align: center;
-    width: 800px;}
+    width: 800px;
+    font-stretch: expanded;
+  }
     
    footer {
   background-color:red;
