Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   }
   section[p]{text-align: center;
     width: 800px;
-    font-stretch: condensed;
+    text-align: justify;
   }
     
    footer {
