--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     background-color: powderblue;
   }
   section[p]{text-align: center;
-    width: 800px;
+    wide: 800px;
     text-align: justify;
   }
     
