--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
     background-color: powderblue;
   }
   section[p]{text-align: center;
-   width: 800px;
-    
-  }
+   width: 800px; }
     
    footer {
   background-color:red;
