Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     background-color: powderblue;
   }
   section[p]{text-align: center;
-   width: 800px; }
+   width: 800px;
+   border: 1px solid black;}
     
    footer {
   background-color:red;
