Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
    width: 800px;
    }
    
-   p{
+   p{ width: 150px;
+  border: 1px solid black;  }
     
    footer {
   background-color:red;
